igt@i915_module_load@load - abort - BUG: kernel NULL pointer dereference, address: 0000000000000000
<7> [40.117951] i915 0000:00:02.0: [drm:drm_dp_read_dpcd_caps [drm_display_helper]] AUX USBC2/DDI TC2/PHY TC2: Base DPCD: 12 14 c4 81 01 11 01 83 2a 3f 04 00 00 00 84
<7> [40.117960] i915 0000:00:02.0: [drm:drm_dp_read_dpcd_caps [drm_display_helper]] AUX USBC2/DDI TC2/PHY TC2: DPCD: 14 1e c4 81 01 11 01 83 2a 3f 04 00 00 00 84
<7> [40.119332] i915 0000:00:02.0: [drm:drm_dp_dump_desc.isra.0 [drm_display_helper]] AUX USBC2/DDI TC2/PHY TC2: DP branch: OUI 90-cc-24 dev-ID SYNAR" HW-rev 1.0 SW-rev 5.4 quirks 0x0028
<1> [40.119342] BUG: kernel NULL pointer dereference, address: 0000000000000000
<1> [40.119343] #PF: supervisor read access in kernel mode
<1> [40.119343] #PF: error_code(0x0000) - not-present page
<6> [40.119345] PGD 0 P4D 0
<4> [40.119346] Oops: Oops: 0000 [#1] PREEMPT SMP NOPTI
<4> [40.119348] CPU: 1 UID: 0 PID: 303 Comm: kworker/1:2 Not tainted 6.12.0-rc7-CI_DRM_15689-g169c7cd31a37+ #1
<4> [40.119350] Hardware name: Intel Corporation Meteor Lake Client Platform/MTL-P DDR5 SODIMM SBS RVP, BIOS MTLPFWI1.R00.3471.D89.2401091901 01/09/2024
<4> [40.119350] Workqueue: events_long drm_dp_mst_link_probe_work [drm_display_helper]
<4> [40.119358] RIP: 0010:intel_dp_add_mst_connector+0x13b/0x320 [i915]
<4> [40.119486] Code: 4c 89 f7 83 e2 01 e8 f4 6c d2 ff 85 c0 78 49 f6 44 24 1c 20 74 42 0f b6 44 24 27 0f b6 54 24 29 83 e0 02 83 e2 08 08 d0 74 2e <49> 8b 37 4c 8b 4b 60 44 8b 43 40 48 85 f6 74 04 48 8b 76 08 ba 02
<4> [40.119487] RSP: 0018:ffffc9000171bb58 EFLAGS: 00010202
<4> [40.119488] RAX: 0000000000000008 RBX: ffff888114769000 RCX: 0000000000000000
<4> [40.119489] RDX: 0000000000000008 RSI: ffffffff82423b8d RDI: 00000000ffffffff
<4> [40.119489] RBP: ffff88810c919000 R08: 0000000000000001 R09: 0000000000000000
<4> [40.119490] R10: 0000000000000001 R11: 0000000000000001 R12: ffff888106098d68
<4> [40.119490] R13: ffff888104b12e18 R14: ffff888104b12358 R15: 0000000000000000
<4> [40.119491] FS: 0000000000000000(0000) GS:ffff88846fa40000(0000) knlGS:0000000000000000
<4> [40.119492] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [40.119492] CR2: 0000000000000000 CR3: 000000000263a006 CR4: 0000000000f72ef0
<4> [40.119493] DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
<4> [40.119493] DR3: 0000000000000000 DR6: 00000000ffff07f0 DR7: 0000000000000400
<4> [40.119494] PKRU: 55555554
<4> [40.119494] Call Trace:
<4> [40.119495] <TASK>
<4> [40.119496] ? __die+0x1e/0x60
<4> [40.119501] ? page_fault_oops+0x157/0x470
<4> [40.119504] ? do_user_addr_fault+0x63/0x710
<4> [40.119506] ? exc_page_fault+0x68/0x1f0
<4> [40.119510] ? asm_exc_page_fault+0x26/0x30
<4> [40.119515] ? intel_dp_add_mst_connector+0x13b/0x320 [i915]
<4> [40.119657] ? intel_dp_add_mst_connector+0x11c/0x320 [i915]
<4> [40.119791] ? snprintf+0x4d/0x70
<4> [40.119793] drm_dp_mst_port_add_connector+0x107/0x1b0 [drm_display_helper]
<4> [40.119802] ? x64_sys_call+0xb6d/0x17f0
<4> [40.119804] ? i2c_register_adapter+0x3b7/0x7b0
<4> [40.119808] ? __mutex_unlock_slowpath+0x35/0x290
<4> [40.119811] ? drm_dp_port_set_pdt+0x13a/0x2d0 [drm_display_helper]
<4> [40.119819] drm_dp_send_link_address+0x861/0x9b0 [drm_display_helper]
<4> [40.119827] drm_dp_check_and_send_link_address+0x75/0x90 [drm_display_helper]
<4> [40.119834] drm_dp_mst_link_probe_work+0x12d/0x1b0 [drm_display_helper]
<4> [40.119841] process_one_work+0x1fe/0x6a0
<4> [40.119845] worker_thread+0x1d7/0x390
<4> [40.119846] ? __pfx_worker_thread+0x10/0x10
<4> [40.119848] kthread+0xea/0x120
<4> [40.119851] ? __pfx_kthread+0x10/0x10
<4> [40.119852] ret_from_fork+0x2c/0x50
<4> [40.119855] ? __pfx_kthread+0x10/0x10
<4> [40.119856] ret_from_fork_asm+0x1a/0x30
<4> [40.119858] </TASK>